changes to fix the vertical alignment of photo
good.

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@
     
 }
 
+.helper{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
 
 .sect1{
     display: inline-block;
@@ -126,7 +131,7 @@
 .sect2{
     width: 50%;
     height: 100%;
-    padding: 10% 5% 10% 10%;
+    padding: 10% 5% 10% 5%;
 }
 
 .sect1 img{
